--- a/src/formularios/frmProveedoresAgregar.form
+++ b/src/formularios/frmProveedoresAgregar.form
@@ -125,7 +125,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/iconos/Atras.png"/>
             </Property>
-            <Property name="toolTipText" type="java.lang.String" value="Atr&#xe1;s"/>
+            <Property name="toolTipText" type="java.lang.String" value="Volver Atr&#xe1;s"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Cursor de Mano"/>
             </Property>
