--- a/src/formularios/frmVentas.form
+++ b/src/formularios/frmVentas.form
@@ -445,11 +445,7 @@
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="Sucursal1"/>
-                <StringItem index="1" value="Sucursal2"/>
-                <StringItem index="2" value="Sucursal3"/>
-              </StringArray>
+              <StringArray count="0"/>
             </Property>
           </Properties>
           <AuxValues>
